# mondot

./: .gitignore  CMakeLists.txt  README.md  mondot
comparation/: loop.lua  loop.mon
scripts/: enimie.mon  ex.mon  foreach.mon  if.mon  outro.mon  test.mon  while.mon
src/: CMakeLists.txt  ast.cpp  ast.h  bytecode.cpp  bytecode.h  facts.cpp  facts.h  fileutil.cpp  fileutil.h  host.cpp  host.h  host_core_funcs.h  lexer.cpp  lexer.h  main.cpp  module.cpp  module.h  mondot.cpp  mondot.h  parser.cpp  parser.h  util.cpp  util.h  value.cpp  value.h  vm.cpp  vm.h
src/runtime/: host.cpp  host.h  host_core_funcs.cpp  host_core_funcs.h  host_manifest.h  vm.cpp
